// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render normally 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#f2f2f7",
          "borderRadius": 5,
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <Input
      style={
        Object {
          "backgroundColor": undefined,
          "borderWidth": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "fontFamily": "System",
          "fontSize": 18,
          "fontWeight": "400",
          "height": 50,
          "includeFontPadding": false,
          "paddingHorizontal": 15,
          "paddingVertical": 0,
          "textAlignVertical": "center",
        }
      }
    />
  </View>
</View>
`;

exports[`should render with custom styles 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
          "backgroundColor": "green",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "color": "#000000",
            "flexShrink": 1,
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "600",
            "height": 11,
            "includeFontPadding": false,
            "lineHeight": 11,
            "marginBottom": 8,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Object {
            "color": "blue",
          },
        ]
      }
    >
      label
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "color": "#000000",
            "flexShrink": 1,
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "600",
            "height": 11,
            "includeFontPadding": false,
            "lineHeight": 11,
            "marginBottom": 8,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Object {
            "color": "#ff3b30",
            "flexShrink": 0,
            "marginLeft": 10,
            "textTransform": "none",
          },
          Object {
            "color": "magenta",
          },
        ]
      }
    >
      error
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#f2f2f7",
          "borderRadius": 5,
          "flexDirection": "row",
        },
        Object {
          "backgroundColor": "orange",
        },
      ]
    }
  >
    <Input
      style={
        Object {
          "backgroundColor": undefined,
          "borderWidth": 0,
          "color": "yellow",
          "flexGrow": 1,
          "flexShrink": 1,
          "fontFamily": "System",
          "fontSize": 18,
          "fontWeight": "400",
          "height": 50,
          "includeFontPadding": false,
          "paddingHorizontal": 15,
          "paddingVertical": 0,
          "textAlignVertical": "center",
        }
      }
    />
    <Image
      source={
        Object {
          "uri": "error.png",
        }
      }
      style={
        Array [
          Object {
            "height": 21,
            "marginRight": 8,
            "width": 21,
          },
          Object {
            "tintColor": "cyan",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`should render with error 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "color": "#000000",
            "flexShrink": 1,
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "600",
            "height": 11,
            "includeFontPadding": false,
            "lineHeight": 11,
            "marginBottom": 8,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          undefined,
        ]
      }
    >
      label
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "color": "#000000",
            "flexShrink": 1,
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "600",
            "height": 11,
            "includeFontPadding": false,
            "lineHeight": 11,
            "marginBottom": 8,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Object {
            "color": "#ff3b30",
            "flexShrink": 0,
            "marginLeft": 10,
            "textTransform": "none",
          },
          undefined,
        ]
      }
    >
      error
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#f2f2f7",
          "borderRadius": 5,
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <Input
      style={
        Object {
          "backgroundColor": undefined,
          "borderWidth": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "fontFamily": "System",
          "fontSize": 18,
          "fontWeight": "400",
          "height": 50,
          "includeFontPadding": false,
          "paddingHorizontal": 15,
          "paddingVertical": 0,
          "textAlignVertical": "center",
        }
      }
    />
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/error.png",
        }
      }
      style={
        Array [
          Object {
            "height": 21,
            "marginRight": 8,
            "width": 21,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`should render with label 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 20,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        undefined,
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "color": "#000000",
            "flexShrink": 1,
            "fontFamily": "System",
            "fontSize": 11,
            "fontWeight": "600",
            "height": 11,
            "includeFontPadding": false,
            "lineHeight": 11,
            "marginBottom": 8,
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          undefined,
        ]
      }
    >
      label
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#f2f2f7",
          "borderRadius": 5,
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <Input
      style={
        Object {
          "backgroundColor": undefined,
          "borderWidth": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "fontFamily": "System",
          "fontSize": 18,
          "fontWeight": "400",
          "height": 50,
          "includeFontPadding": false,
          "paddingHorizontal": 15,
          "paddingVertical": 0,
          "textAlignVertical": "center",
        }
      }
    />
  </View>
</View>
`;
